// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering a relative date handles negative values measured in seconds 1`] = `
<time
  dateTime="2021-04-22T01:08:45Z"
  title="2021-04-21, 6:08 p.m."
>
  in 35 seconds
</time>
`;

exports[`rendering a relative date handles values greater than a year old 1`] = `
<time
  dateTime="2020-04-22T00:01:25Z"
  title="2020-04-21, 5:01 p.m."
>
  1 year ago
</time>
`;

exports[`rendering a relative date handles values measured in days 1`] = `
<time
  dateTime="2021-04-18T22:02:01Z"
  title="2021-04-18, 3:02 p.m."
>
  3 days ago
</time>
`;

exports[`rendering a relative date handles values measured in hours 1`] = `
<time
  dateTime="2021-04-21T22:02:01Z"
  title="2021-04-21, 3:02 p.m."
>
  3 hours ago
</time>
`;

exports[`rendering a relative date handles values measured in minutes 1`] = `
<time
  dateTime="2021-04-22T01:02:01Z"
  title="2021-04-21, 6:02 p.m."
>
  6 minutes ago
</time>
`;

exports[`rendering a relative date handles values measured in months 1`] = `
<time
  dateTime="2021-02-01T22:02:01Z"
  title="2021-02-01, 2:02 p.m."
>
  3 months ago
</time>
`;

exports[`rendering a relative date handles values measured in seconds 1`] = `
<time
  dateTime="2021-04-22T01:08:01Z"
  title="2021-04-21, 6:08 p.m."
>
  9 seconds ago
</time>
`;

exports[`rendering a relative date handles values measured in weeks 1`] = `
<time
  dateTime="2021-04-01T22:02:01Z"
  title="2021-04-01, 3:02 p.m."
>
  3 weeks ago
</time>
`;

exports[`rendering a relative date handles values which are less than a second different from the current time 1`] = `
<time
  dateTime="2021-04-22T01:08:10Z"
  title="2021-04-21, 6:08 p.m."
>
  just now
</time>
`;
